--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "polymarket-pro",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "next start -p 3000",
+    "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "lightweight-charts": "^5.0.0",
+    "next": "^16.0.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "@types/node": "24.10.0",
+    "@types/react": "19.2.2",
+    "eslint-config-next": "^16.0.1",
+    "typescript": "5.9.3"
   }
 }
