--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "sonner": "^1.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "24.10.0",
     "@types/react": "19.2.2",
+    "autoprefixer": "^10.4.21",
     "eslint-config-next": "^16.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "5.9.3"
   }
 }
