--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "lightweight-charts": "^5.0.0",
     "next": "^16.0.1",
+    "polymarket-data": "^0.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "sonner": "^1.5.0"
